@@ -23,40 +23,42 @@ import com.echothree.model.control.party.common.PartyTypes;
 import com.echothree.model.control.party.server.control.PartyControl;
 import com.echothree.model.control.security.common.SecurityRoleGroups;
 import com.echothree.model.control.security.common.SecurityRoles;
-import com.echothree.model.data.user.common.pk.UserVisitPK;
+import com.echothree.model.data.geo.server.entity.GeoCode;
+import com.echothree.model.data.geo.server.entity.GeoCodeLanguage;
+import com.echothree.model.data.geo.server.factory.GeoCodeLanguageFactory;
+import com.echothree.model.data.party.server.entity.Language;
+import com.echothree.util.common.command.BaseResult;
 import com.echothree.util.common.message.ExecutionErrors;
 import com.echothree.util.common.validation.FieldDefinition;
 import com.echothree.util.common.validation.FieldType;
-import com.echothree.util.common.command.BaseResult;
-import com.echothree.util.server.control.BaseSimpleCommand;
+import com.echothree.util.server.control.BasePaginatedMultipleEntitiesCommand;
 import com.echothree.util.server.control.CommandSecurityDefinition;
 import com.echothree.util.server.control.PartyTypeDefinition;
 import com.echothree.util.server.control.SecurityRoleDefinition;
-import com.echothree.util.server.persistence.Session;
-import java.util.Arrays;
-import java.util.Collections;
+import java.util.Collection;
 import java.util.List;
 import javax.enterprise.context.Dependent;
+import javax.inject.Inject;
 
 @Dependent
 public class GetGeoCodeLanguagesCommand
-        extends BaseSimpleCommand<GetGeoCodeLanguagesForm> {
+        extends BasePaginatedMultipleEntitiesCommand<GeoCodeLanguage, GetGeoCodeLanguagesForm> {
     
     private final static CommandSecurityDefinition COMMAND_SECURITY_DEFINITION;
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
     
     static {
-        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(Collections.unmodifiableList(Arrays.asList(
+        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(List.of(
                 new PartyTypeDefinition(PartyTypes.UTILITY.name(), null),
-                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), Collections.unmodifiableList(Arrays.asList(
+                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), List.of(
                         new SecurityRoleDefinition(SecurityRoleGroups.GeoCodeLanguage.name(), SecurityRoles.List.name())
-                        )))
-                )));
+                        ))
+                ));
         
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
+        FORM_FIELD_DEFINITIONS = List.of(
                 new FieldDefinition("GeoCodeName", FieldType.ENTITY_NAME, false, null, null),
                 new FieldDefinition("LanguageIsoName", FieldType.ENTITY_NAME, false, null, null)
-                ));
+                );
     }
     
     /** Creates a new instance of GetGeoCodeLanguagesCommand */
@@ -64,39 +66,90 @@ public class GetGeoCodeLanguagesCommand
         super(COMMAND_SECURITY_DEFINITION, FORM_FIELD_DEFINITIONS, true);
     }
     
+    @Inject
+    GeoControl geoControl;
+
+    @Inject
+    PartyControl partyControl;
+
+    GeoCode geoCode;
+    Language language;
+
     @Override
-    protected BaseResult execute() {
-        var geoControl = Session.getModelController(GeoControl.class);
-        var result = GeoResultFactory.getGetGeoCodeLanguagesResult();
+    protected void handleForm() {
         var geoCodeName = form.getGeoCodeName();
         var languageIsoName = form.getLanguageIsoName();
-        var parameterCount = (geoCodeName != null? 1: 0) + (languageIsoName != null? 1: 0);
-        
+        var parameterCount = (geoCodeName != null ? 1 : 0) + (languageIsoName != null ? 1 : 0);
+
         if(parameterCount == 1) {
             if(geoCodeName != null) {
-                var geoCode = geoControl.getGeoCodeByName(geoCodeName);
-                
-                if(geoCode != null) {
-                    result.setGeoCode(geoControl.getGeoCodeTransfer(getUserVisit(), geoCode));
-                    result.setGeoCodeLanguages(geoControl.getGeoCodeLanguageTransfersByGeoCode(getUserVisit(), geoCode));
-                } else {
+                geoCode = geoControl.getGeoCodeByName(geoCodeName);
+
+                if(geoCode == null) {
                     addExecutionError(ExecutionErrors.UnknownGeoCodeName.name(), geoCodeName);
                 }
-            } else if(languageIsoName != null) {
-                var partyControl = Session.getModelController(PartyControl.class);
-                var language = partyControl.getLanguageByIsoName(languageIsoName);
-                
-                if(language != null) {
-                    result.setLanguage(partyControl.getLanguageTransfer(getUserVisit(), language));
-                    result.setGeoCodeLanguages(geoControl.getGeoCodeLanguageTransfersByLanguage(getUserVisit(), language));
-                } else {
+            } else {
+                language = partyControl.getLanguageByIsoName(languageIsoName);
+
+                if(language == null) {
                     addExecutionError(ExecutionErrors.UnknownLanguageIsoName.name(), languageIsoName);
                 }
             }
         } else {
             addExecutionError(ExecutionErrors.InvalidParameterCount.name());
         }
-        
+    }
+
+    @Override
+    protected Long getTotalEntities() {
+        Long totalEntities = null;
+
+        if(!hasExecutionErrors()) {
+            if(geoCode != null) {
+                totalEntities = geoControl.countGeoCodeLanguagesByGeoCode(geoCode);
+            } else {
+                totalEntities = geoControl.countGeoCodeLanguagesByLanguage(language);
+            }
+        }
+
+        return totalEntities;
+    }
+
+    @Override
+    protected Collection<GeoCodeLanguage> getEntities() {
+        Collection<GeoCodeLanguage> entities = null;
+
+        if(!hasExecutionErrors()) {
+            if(geoCode != null) {
+                entities = geoControl.getGeoCodeLanguagesByGeoCode(geoCode);
+            } else {
+                entities = geoControl.getGeoCodeLanguagesByLanguage(language);
+            }
+        }
+
+        return entities;
+    }
+
+    @Override
+    protected BaseResult getResult(Collection<GeoCodeLanguage> entities) {
+        var result = GeoResultFactory.getGetGeoCodeLanguagesResult();
+
+        if(entities != null) {
+            var userVisit = getUserVisit();
+
+            if(geoCode != null) {
+                result.setGeoCode(geoControl.getGeoCodeTransfer(userVisit, geoCode));
+            } else {
+                result.setLanguage(partyControl.getLanguageTransfer(userVisit, language));
+            }
+
+            if(session.hasLimit(GeoCodeLanguageFactory.class)) {
+                result.setGeoCodeLanguageCount(getTotalEntities());
+            }
+
+            result.setGeoCodeLanguages(geoControl.getGeoCodeLanguageTransfers(userVisit, entities));
+        }
+
         return result;
     }
     
